<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_liste"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_liste" />
        <item
            android:id="@+id/nav_carte"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_carte" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@android:drawable/ic_menu_rotate"
            android:title="@string/menu_sync" />
        <item
            android:id="@+id/nav_apropos"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_apropos" />
    </group>
</menu>
